syntax = "proto3";

option go_package = "module";

service ModuleService {
  rpc Create (ModuleCreateRequest) returns (ModuleCreateResponse) {}
  rpc Delete (ModuleDeleteRequest) returns (ModuleDeleteResponse) {}
  rpc Get (ModuleGetRequest) returns (ModuleGetResponse) {}
  rpc List (ModuleListRequest) returns (ModuleListResponse) {}
}

message ModuleCreateRequest {
  string modulename = 1;
  string eventsubscriptions = 2;
  string eventpublications = 3;
  string moduleimage = 4;
  string moduleimagetag = 5;
  string handlerimage = 6;
  string handlerimagetag = 7;
  int32 instancecount = 8;
  int32 retrycount = 9;
  string provider = 10;
  map<string, string> configmap = 11;
}

message ModuleCreateResponse {
  string name = 1;
}

message ModuleDeleteRequest {
  string name = 1;
}

message ModuleDeleteResponse {
  string name = 1;
}

message ModuleGetRequest {
  string name = 1;
}

//TODO: add more fields
message ModuleGetResponse {
  string name = 1;
  string status = 2;
  string statusMessage = 3;
}

message ModuleListRequest {

}

message ModuleListResponse {
  repeated string names = 1;
}

message Empty {}

